# UAV_controller

./: .gitmodules  CMakeLists.txt  Doxyfile  _a_h_r_s_8cpp.html  _a_h_r_s_8cpp__incl.dot  _a_h_r_s_8hpp.html  _a_h_r_s_8hpp__dep__incl.dot  _a_h_r_s_8hpp__incl.dot  _a_h_r_s_8hpp_source.html  _a_h_r_s___e_k_f_8cpp.html  _a_h_r_s___e_k_f_8cpp.js  _a_h_r_s___e_k_f_8cpp__incl.dot  _a_h_r_s___e_k_f_8hpp.html  _a_h_r_s___e_k_f_8hpp__dep__incl.dot  _a_h_r_s___e_k_f_8hpp__incl.dot  _a_h_r_s___e_k_f_8hpp_source.html  _a_h_r_s__complementary_8cpp.html  _a_h_r_s__complementary_8cpp.js  _a_h_r_s__complementary_8cpp__incl.dot  _a_h_r_s__complementary_8hpp.html  _a_h_r_s__complementary_8hpp__dep__incl.dot  _a_h_r_s__complementary_8hpp__incl.dot  _a_h_r_s__complementary_8hpp_source.html  _e_k_f_8cpp.html  _e_k_f_8cpp__incl.dot  _e_k_f_8hpp.html  _e_k_f_8hpp__dep__incl.dot  _e_k_f_8hpp__incl.dot  _e_k_f_8hpp_source.html  _n_s_8cpp.html  _n_s_8cpp__incl.dot  _n_s_8hpp.html  _n_s_8hpp__dep__incl.dot  _n_s_8hpp__incl.dot  _n_s_8hpp_source.html  annotated.html  annotated_dup.js  class_a_h_r_s-members.html  class_a_h_r_s.html  class_a_h_r_s.js  (+299 more)
docs/latex/: _a_h_r_s_8cpp.tex  _a_h_r_s_8cpp.tex.tmp  _a_h_r_s_8cpp__incl.dot  _a_h_r_s_8hpp.tex  _a_h_r_s_8hpp__dep__incl.dot  _a_h_r_s_8hpp__incl.dot  _a_h_r_s___e_k_f_8cpp.tex  _a_h_r_s___e_k_f_8cpp__incl.dot  _a_h_r_s___e_k_f_8hpp.tex  _a_h_r_s___e_k_f_8hpp__dep__incl.dot  _a_h_r_s___e_k_f_8hpp__incl.dot  _a_h_r_s__complementary_8cpp.tex  _a_h_r_s__complementary_8cpp__incl.dot  _a_h_r_s__complementary_8hpp.tex  _a_h_r_s__complementary_8hpp__dep__incl.dot  _a_h_r_s__complementary_8hpp__incl.dot  _e_k_f_8cpp.tex  _e_k_f_8cpp__incl.dot  _e_k_f_8hpp.tex  _e_k_f_8hpp__dep__incl.dot  _e_k_f_8hpp__incl.dot  _n_s_8cpp.tex  _n_s_8cpp__incl.dot  _n_s_8hpp.tex  _n_s_8hpp__dep__incl.dot  _n_s_8hpp__incl.dot  annotated.tex  class_a_h_r_s.tex  class_a_h_r_s___e_k_f.tex  class_a_h_r_s___e_k_f__coll__graph.dot  class_a_h_r_s___e_k_f__inherit__graph.dot  class_a_h_r_s__coll__graph.dot  class_a_h_r_s__complementary.tex  class_a_h_r_s__complementary__coll__graph.dot  class_a_h_r_s__complementary__inherit__graph.dot  class_a_h_r_s__inherit__graph.dot  class_accelerometer.tex  class_accelerometer__inherit__graph.dot  class_barometer.tex  class_barometer__coll__graph.dot  (+155 more)
scripts/: control.py  exit.py  switch_mode.py
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  (+48 more)
src/: AHRS.cpp  AHRS.hpp  AHRS_EKF.cpp  AHRS_EKF.hpp  AHRS_complementary.cpp  AHRS_complementary.hpp  EKF.cpp  EKF.hpp  GPS.cpp  GPS.hpp  Gyro.cpp  Gyro.hpp  NS.cpp  NS.hpp  NS2.cpp  NS2.hpp  PID.cpp  PID.hpp  config.xml  control.cpp  control.hpp  controller.cpp  controller.hpp  controller_mode.hpp  defines.hpp  environment.cpp  environment.hpp  gyro.cpp  gyro.hpp  logger.cpp  logger.hpp  main  main.cpp  mixers.cpp  mixers.hpp  oldsensor.cpp  oldsensor.hpp  params.cpp  params.hpp  sensor.cpp  (+8 more)
src/Controller/: controller_loop.cpp  controller_loop.hpp  controller_loop_NONE.hpp  controller_loop_QACRO.hpp  controller_loop_QANGLE.cpp  controller_loop_QANGLE.hpp  controller_loop_QPOS.cpp  controller_loop_QPOS.hpp  controller_loop_common.hpp
src/UAV_NS/: AHRS.cpp  AHRS.hpp  AHRS_EKF.cpp  AHRS_EKF.hpp  AHRS_complementary.cpp  AHRS_complementary.hpp  EKF.cpp  EKF.hpp  NS.cpp  NS.hpp  environment.cpp  environment.hpp  sensors.cpp  sensors.hpp
src/UAV_common/: PID.cpp  PID.hpp
src/communication/: control.cpp  control.hpp  control_recv.cpp  control_send.cpp  state.cpp  state.hpp
src/controller/: controller.cpp  controller.hpp  controller_loop.cpp  controller_loop.hpp  controller_mode.hpp  mixers.hpp
src/navigation/: AHRS.cpp  AHRS.hpp  EKF.cpp  EKF.hpp  NS.cpp  NS.hpp  environment.cpp  environment.hpp  sensors.cpp  sensors.hpp
(+26 files in other folders)
